# FrenchReadingAssisstant-stirlingPDF

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .gitmodules  LICENSE  README.md  THIRD-PARTY-NOTICES.md  docker-compose.yml
docs/: README.md  dev-setup.md  user-guide.md
extensions/: french-reader-version.json
extensions/french-reader-engine/: pyproject.toml
extensions/french-reader-engine/src/french_reader/: __init__.py  _plugin_version.json  ai_availability.py  ai_service.py  bubble_availability.py  bubble_detector.py  config.py  export_service.py  llm_providers.py  main.py  markdown_pdf.py  ocr_availability.py  ocr_corrections.py  ocr_service.py  paragraph_availability.py  paragraph_detector.py  paragraph_tesseract.py  pdf_fonts.py  plugin_version.py  router.py  schemas.py  text_postprocess.py  tts_service.py
extensions/french-reader-engine/src/french_reader/prompts/: __init__.py  templates.py
extensions/french-reader-engine/tests/: regression_assets.py  test_ai.py  test_auto_bubbles.py  test_auto_paragraphs.py  test_bubble_detector.py  test_export.py  test_health.py  test_markdown_pdf.py  test_ocr.py  test_ocr_corrections.py  test_ocr_engines.py  test_paragraph_detector.py  test_paragraph_regression_fixtures.py  test_paragraph_tesseract.py  test_plugin_version.py  test_postprocess.py  test_tts.py
licenses/: README.md  STIRLING-PDF-LICENSE
screenshots/: README.md
scripts/: build-desktop.sh  build-portable-macos.sh  build-portable-windows.ps1  build-stirling-desktop-portable-windows.ps1  build-stirling-desktop-portable.sh  bundle-sidecar-macos.sh  bundle-sidecar-windows.ps1  desktop-dev.sh  dev.sh  docker-build.sh  docker-up.sh  fetch-tesseract-macos.sh  fetch-tesseract-windows.ps1  gradle-bootjar-portable.sh  install-extensions.sh  patch-tauri-portable.py  patch-vite-proxy.py  portable-gradle.init.gradle  setup-ocr.sh  sync-plugin-version.py  sync-upstream.sh  (+2 more)
(+88 files in other folders)
